--- a/public/about.html
+++ b/public/about.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="functionality.html">Functionality</a></li>
+        <li><a href="food.html">Functionality</a></li>
       </ul>
     </nav>
   </header>
