--- a/public/food.html
+++ b/public/food.html
@@ -1,4 +1,86 @@
+<html>
 <script src="https://developer.edamam.com/attribution/badge.js"></script>
+<script type="text/Javascript" src="food.js" defer></script>
+<body>
+    <form onsubmit="createRecipe()">
+        <label for="food">Enter a food:</label>
+        <input type="text" id="food" name="food" required>
 
+        <label for="mealType">Select a meal type:</label>
+        <select id="mealType" name="mealType" required>
+            <option value="American">American</option>
+            <option value="Asian">Asian</option>
+            <option value="British">British</option>
+            <option value="Chinese">Chinese</option>
+            <option value="Caribbean">Caribbean</option>
+            <option value="Central Europe">Central Europe</option>
+            <option value="Eastern Europe">Eastern Europe</option>
+            <option value="French">French</option>
+            <option value="Indian">Indian</option>
+            <option value="Italian">Italian</option>
+            <option value="Japanese">Japanese</option>
+            <option value="Kosher">Kosher</option>
+            <option value="Mediterranean">Mediterranean</option>
+            <option value="Mexican">Mexican</option>
+            <option value="Middle Eastern">Middle Eastern</option>
+            <option value="Nordic">Nordic</option>
+            <option value="South American">South American</option>
+            <option value="South East Asian">South East Asian</option>
+        </select>
+
+        <label for="healthType">Select health types:</label>
+        <select id="healthType" name="healthType" multiple></select>
+            <option value="alcohol-cocktail">Alcohol Cocktail</option>
+            <option value="alcohol-free">Alcohol Free</option>
+            <option value="celery-free">Celery Free</option>
+            <option value="crustacean-free">Crustacean Free</option>
+            <option value="dairy-free">Dairy Free</option>
+            <option value="DASH">DASH</option>
+            <option value="egg-free">Egg Free</option>
+            <option value="fish-free">Fish Free</option>
+            <option value="fodmap-free">FODMAP Free</option>
+            <option value="gluten-free">Gluten Free</option>
+            <option value="immuno-supportive">Immuno Supportive</option>
+            <option value="keto-friendly">Keto Friendly</option>
+            <option value="kidney-friendly">Kidney Friendly</option>
+            <option value="kosher">Kosher</option>
+            <option value="low-fat-abs">Low Fat Abs</option>
+            <option value="low-potassium">Low Potassium</option>
+            <option value="low-sugar">Low Sugar</option>
+            <option value="lupine-free">Lupine Free</option>
+            <option value="Mediterranean">Mediterranean</option>
+            <option value="mollusk-free">Mollusk Free</option>
+            <option value="mustard-free">Mustard Free</option>
+            <option value="no-oil-added">No Oil Added</option>
+            <option value="paleo">Paleo</option>
+            <option value="peanut-free">Peanut Free</option>
+            <option value="pescatarian">Pescatarian</option>
+            <option value="pork-free">Pork Free</option>
+            <option value="red-meat-free">Red Meat Free</option>
+            <option value="sesame-free">Sesame Free</option>
+            <option value="shellfish-free">Shellfish Free</option>
+            <option value="soy-free">Soy Free</option>
+            <option value="sugar-conscious">Sugar Conscious</option>
+            <option value="sulfite-free">Sulfite Free</option>
+            <option value="tree-nut-free">Tree Nut Free</option>
+            <option value="vegan">Vegan</option>
+            <option value="vegetarian">Vegetarian</option>
+            <option value="wheat-free">Wheat Free</option>
+        </select>
+
+        <label for="dietType">Select a diet type:</label>
+        <select id="dietType" name="dietType" required multiple>
+            <option value="balanced">Balanced</option>
+            <option value="high-fiber">High Fiber</option>
+            <option value="high-protein">High Protein</option>
+            <option value="low-carb">Low Carb</option>
+            <option value="low-fat">Low Fat</option>
+            <option value="low-sodium">Low Sodium</option>
+        </select>
+
+        <button type="submit" name = "searchFood">Search</button>
+    </form>
+</body>
 
 <div id="edamam-badge" data-color="white"></div>
+</html>
