Update food.html to have Form to submit Post Request to Plans API

--- a/public/food.html
+++ b/public/food.html
@@ -82,9 +82,12 @@
     </form>
 
     <div id="search-table">
-        <div id="plan-table"></div>
-          
-    </div>
+    <div id="plan-table"></div>
+    <form onsubmit="postRecipe()">
+        <input name="recipes"></input>
+        <button type="submit">Submit recipe!</button>
+    </form> 
+</div>
 </body>
 
 <div id="edamam-badge" data-color="white"></div>
